android: mantener compatibilidad con API 24